k8s/services/media/app/jellyseerr/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: media
  hostnames:
    - jellyseerr.lama-corp.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: jellyseerr
          port: 80
      timeouts:
        request: 60s
        backendRequest: 60s
